# minispark

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cicd.yml
docs/: InnerWorkings.md
examples/: benchmark.py  fruit_aggregation.py  read_block_file.py
src/: constants.py  dataframe.py  distributed_ex.py  example.py  io.py  query.py  read_block_file.py  sql.py  storage.py
src/mini_spark/: algorithms.py  codegen.py  codegen2.py  constants.py  dataframe.py  execution.py  interpreter.py  io.py  jobs.py  parser.py  plan.py  query.py  shell.py  sql.py  tasks.py  utils.py  zig_bridge.py
src/mini_spark/templates/: plan.zig
tests/: conftest.py  test_algorithms.py  test_codegen.py  test_dataframe.py  test_e2e.py  test_execution.py  test_execution_distributed.py  test_execution_python.py  test_io.py  test_native_execution.py  test_parser.py  test_plan.py  test_sql.py  test_tasks.py
zig-src/: build.zig  build.zig.zon  executor.zig
zig-src/src/: block_file.zig  job.zig  main.zig  root.zig  task_utils.zig  tasks.zig  utils.zig
