[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini_spark"
version = "0.1.0"
authors = [{ name = "David Westreicher" }]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "perfetto.*"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["ALL"]
src = ["src", "tests"]
line-length = 120
ignore = [
    "S101", # Allow use of assert statements
]
