[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini_spark"
version = "0.1.0"
authors = [{ name = "David Westreicher" }]
requires-python = ">=3.13"
dependencies = ["rpyc==6.0.2", "perfetto==0.14.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "rpyc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "perfetto.*"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["ALL"]
src = ["src", "tests"]
line-length = 120
lint.ignore = [
    "S101",   # Allow use of assert statements
    "D",      # Missing docstring
    "FIX002", # Allow TODO comments
    "TD003",  # Allow TODO without issue link
    "COM812",
    "EM102",  # Allow f-string in errors
    "TRY003", # Allow messages for exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "ANN201",  # Allow missing type annotations in tests
    "PLR2004", # Allow magic values
]
