[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini_spark"
version = "0.1.0"
authors = [{ name = "David Westreicher" }]
requires-python = ">=3.13"
dependencies = [
    "prompt_toolkit==3.0.52",
    "parsimonious==0.10.0",
    "pytest==8.4.1",
    "pytest-timeout==2.4.0",
    "perfetto==0.14.0",
    "ruff==0.12.10",
    "mypy==1.17.1",
    "Jinja2==3.1.6",
    "tabulate==0.9.0",
]

[tool.pytest.ini_options]
markers = ["no_patch_eq"]

pythonpath = ["src"]
timeout = 10
[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "perfetto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tabulate.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "parsimonious.*"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["ALL"]
src = ["src", "tests"]
line-length = 120
lint.ignore = [
    "S101",   # Allow use of assert statements
    "D",      # Missing docstring
    "FIX002", # Allow TODO comments
    "TD003",  # Allow TODO without issue link
    "COM812",
    "EM102",  # Allow f-string in errors
    "TRY003", # Allow messages for exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "ANN201",  # Allow missing type annotations in tests
    "PLR2004", # Allow magic values
]
